# rnpo-web-tools

./: .gitignore  README.md  pyproject.toml  setup.cfg
about/static/about/css/: main.css
about/templates/about/: about.html  layout.html
network_live/: apps.py  urls.py  views.py
network_live/logs/: kcell_cells.xlsx
network_live/src/: __init__.py  excel.py  select.py
network_live/static/network_live/js/: index.js
network_live/templates/network_live/: tables_form.html
site_count/: apps.py  urls.py  views.py
site_count/src/: __init__.py  count_sites.py  fill_table.py  select.py
site_count/static/site_count/js/: index.js
site_count/templates/site_count/: index.html
web_tools/: asgi.py  settings.py  urls.py  wsgi.py
